# wasmer

./: .ctags  .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  Cargo.toml  Makefile  azure-pipelines.yml  bors.toml
.github/workflows/: build-linux-amd64.yml  libwasmer-build-dev.yml  libwasmer-build-shim-linux-arm64.yml  libwasmer-build-shim-mac-arm64.yml  libwasmer-build-shim.yml  libwasmer-build.yml  libwasmer-release.yml
Docker/: arm64.dockerfile
breakpoint_tests/: crash.c
breakpoint_tests/contracts/crash/: crash.cpp
capi_shim/: README.md
examples/parallel/: Cargo.toml
examples/plugin-for-example/: wapm.toml
lib/api/: Cargo.toml
lib/api/src/sys/: instance.rs  store.rs
lib/clif-backend/: Cargo.toml
lib/clif-backend/src/: lib.rs
lib/compiler/: Cargo.toml
lib/compiler-llvm/src/translator/: stackmap.rs
lib/compiler-singlepass/: Cargo.toml
lib/compiler-singlepass/src/: codegen.rs  compiler.rs  emitter_arm64.rs  lib.rs  machine_arm64.rs
lib/compiler/src/translator/: middleware.rs
lib/dev-utils/: Cargo.toml
lib/emscripten/: Cargo.toml
lib/emscripten-tests/: Cargo.toml
lib/llvm-backend/: Cargo.toml
lib/middleware-common/: Cargo.toml
lib/middleware-common-tests/: Cargo.toml
lib/middleware-common/src/: lib.rs  metering.rs  metering_costs.rs  opcode_control.rs  opcode_trace.rs  runtime_breakpoints.rs
lib/runtime/: Cargo.toml
lib/runtime-c-api/: Cargo.toml  README.md  wasmer.h  wasmer.hh
lib/runtime-c-api/src/: import.rs  instance.rs  instance_cache.rs  lib.rs  metering.rs  runtime_breakpoints.rs  signals.rs
lib/runtime-c-api/src/import/: mod.rs
lib/runtime-c-api/tests/: .gitignore  CMakeLists.txt  test-module-limit.c
lib/runtime-core/: Cargo.toml
lib/runtime-core-tests/: Cargo.toml
lib/runtime-core/src/: backing.rs  cache.rs  codegen.rs  fault.rs  instance.rs  lib.rs  loader.rs  module.rs  state.rs  types.rs  units.rs  vm.rs  wrapped_cow.rs  wrapped_index_map.rs
lib/runtime-core/src/memory/: dynamic.rs  mod.rs
lib/runtime-core/src/sys/: memory_rkyv.rs
lib/runtime-core/src/sys/unix/: memory.rs
lib/runtime/src/: cache.rs  lib.rs
lib/singlepass-backend/: Cargo.toml
lib/singlepass-backend/src/: codegen_x64.rs  lib.rs
lib/spectests/: Cargo.toml
lib/types/src/: units.rs
lib/vm/src/: lib.rs  libcalls.rs  memory.rs  mmap.rs  vmcontext.rs
lib/vm/src/instance/: mod.rs  reset.rs
lib/vm/src/trap/: mod.rs  traphandlers.rs
lib/wasi/: Cargo.toml
lib/wasi-tests/: Cargo.toml
lib/win-exception-handler/: Cargo.toml
tests/compilers/: issues.rs  main.rs  native_functions.rs
