[package]
name = "wasmer-runtime-c-api"
version = "0.7.0"
description = "Wasmer C API library"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
libc = "0.2.60"

[dependencies.wasmer-runtime]
default-features = false
path = "../runtime"
version = "0.7.0"

[dependencies.wasmer-runtime-core]
default-features = false
path = "../runtime-core"
version = "0.7.0"

[dependencies.wasmer-middleware-common]
path = "../middleware-common"
version = "0.6.0"
optional = true

[dependencies.wasmer-singlepass-backend]
path = "../singlepass-backend"
version = "0.6.0"
optional = true


[features]
default = ["cranelift-backend"]
debug = ["wasmer-runtime/debug"]
cranelift-backend = ["wasmer-runtime/cranelift", "wasmer-runtime/default-backend-cranelift"]
llvm-backend = ["wasmer-runtime/llvm", "wasmer-runtime/default-backend-llvm"]
singlepass-backend = ["wasmer-runtime/singlepass", "wasmer-runtime/default-backend-singlepass"]
metering = ["wasmer-runtime/singlepass", "wasmer-middleware-common", "wasmer-singlepass-backend"]

[build-dependencies]
cbindgen = "0.9.1"
